--- a/l10n/po/ja_JP/_guides/azure-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/azure-functions-http.adoc.po
@@ -3,43 +3,40 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-23 11:07+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-06 12:54+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/azure-functions-http.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Azure Functions (Serverless) with RESTEasy, Undertow, or Vert.x Web"
 msgstr "Quarkus - RESTEasy、Undertow、またはVert.x Webを使用したAzure Functions (サーバーレス)"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:13
-#, fuzzy
 msgid "The `quarkus-azure-functions-http` extension allows you to write microservices with RESTEasy (JAX-RS), Undertow (servlet), Vert.x Web, or link:funqy-http[Funqy HTTP] and make these microservices deployable to the Azure Functions runtime."
-msgstr "`quarkus-azure-functions-http` エクステンションを使うと、RESTEasy (JAX-RS)、Undertow (サーブレット)、Vert.x Web、または link:funqy-http[Funqy HTTPを] 使ってマイクロサービスを書き、これらのマイクロサービスをAzure Functionsランタイムにデプロイできるようにすることができます。"
+msgstr "`quarkus-azure-functions-http` エクステンションを使うと、RESTEasy (JAX-RS)、Undertow (サーブレット)、Vert.x Web、または link:funqy-http[Funqy HTTP] を使ってマイクロサービスを書き、これらのマイクロサービスをAzure Functionsランタイムにデプロイできるようにすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:15
-#, fuzzy
 msgid "One azure function deployment can represent any number of JAX-RS, servlet, Vert.x Web, or link:funqy-http[Funqy HTTP] endpoints."
-msgstr "1 つの azure 機能デプロイメントでは、JAX-RS、サーブレット、Vert.x Web、または link:funqy-http[Funqy HTTP] エンドポイントを任意の数だけ表現できます。"
+msgstr "1 つの Azure Functions デプロイメントでは、JAX-RS、サーブレット、Vert.x Web、または link:funqy-http[Funqy HTTP] エンドポイントを任意の数だけ代表できます。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:19
-#, fuzzy
 msgid "Only text based media types are supported at the moment as Azure Functions HTTP Trigger for Java does not support a binary format"
 msgstr "Azure Functions HTTP Trigger for Javaがバイナリ形式をサポートしていないため、現時点ではテキストベースのメディアタイプのみがサポートされています。"
 
@@ -56,13 +53,11 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:25
-#, fuzzy
 msgid "less than 15 minutes"
 msgstr "15分以内"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:26
-#, fuzzy
 msgid "JDK 1.8 (Azure requires JDK 1.8)"
 msgstr "JDK 1.8 (AzureにはJDK 1.8が必要)"
 
@@ -73,39 +68,35 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:28
-#, fuzzy
 msgid "https://azure.microsoft.com[An Azure Account].  Free accounts work."
-msgstr "link:https://azure.microsoft.com[Azureのアカウント] 。無料アカウントの仕事。"
+msgstr "link:https://azure.microsoft.com[Azureのアカウント]  。無料アカウントでも大丈夫です。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:29
-#, fuzzy
 msgid "https://docs.microsoft.com/en-us/cli/azure/install-azure-cli[Azure CLI Installed]"
-msgstr "link:https://docs.microsoft.com/en-us/cli/azure/install-azure-cli[Azure CLIがインストールされている]"
+msgstr "link:https://docs.microsoft.com/en-us/cli/azure/install-azure-cli[Azure CLIがインストールされていること]"
 
 #. type: Title ==
 #: upstream/_guides/azure-functions-http.adoc:30
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:35
-#, fuzzy
 msgid "This guide walks you through running a Maven Archetype to generate a sample project that contains three http endpoints written with JAX-RS APIs, Servlet APIs, Vert.x Web, or link:funqy-http[Funqy HTTP] APIs.  After building, you will then be able to deploy to Azure."
-msgstr "このガイドでは、JAX-RS API、Servlet API、Vert.x Web、または link:funqy-http[Funqy HTTP] APIで記述された3つのHTTPエンドポイントを含むサンプルプロジェクトを生成するために、Maven Archetypeを実行する方法を説明します。ビルド後、Azureにデプロイできるようになります。"
+msgstr "このガイドでは、JAX-RS API、Servlet API、Vert.x Web、または link:funqy-http[Funqy HTTP] APIで記述された3つのHTTPエンドポイントを含むサンプルプロジェクトを生成するために、Maven Archetype のウォークスルーを行います。ビルド後、Azureにデプロイできるようになります。"
 
 #. type: Title ==
 #: upstream/_guides/azure-functions-http.adoc:36
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Deployment Project"
 msgstr "Maven デプロイメントプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:39
-#, fuzzy
 msgid "Create the azure maven project for your Quarkus application using our Maven Archetype."
-msgstr "Maven Archetypeを使用して、Quarkusアプリケーション用のazure mavenプロジェクトを作成します。"
+msgstr "Maven Archetypeを使用して、Quarkusアプリケーション用の Azure mavenプロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/azure-functions-http.adoc:47
@@ -119,73 +110,62 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:50
-#, fuzzy
 msgid "Running this command will run maven in interactive mode and it will ask you to fill in some build properties:"
 msgstr "このコマンドを実行すると、インタラクティブモードでmavenが実行され、いくつかのビルドプロパティーの入力を求められます。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:52
-#, fuzzy
 msgid "`groupId` - The maven groupId of this generated project.  Type in `org.acme`."
 msgstr "`groupId` - この生成されたプロジェクトの maven グループ ID。 `org.acme` と入力します。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:53
-#, fuzzy
 msgid "`artifactId` - The maven artifactId of this generated project. Type in `quarkus-demo`"
-msgstr "`artifactId` - この生成されたプロジェクトの maven artifactId。を入力します。 `quarkus-demo`"
+msgstr "`artifactId` - この生成されたプロジェクトの maven artifactId。を入力します。 `quarkus-demo` と入力します。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:54
-#, fuzzy
 msgid "`version` - Version of this generated project."
 msgstr "`version` - この生成されたプロジェクトのバージョン。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:55
-#, fuzzy
 msgid "`package` - defaults to `groupId`"
 msgstr "`package` - デフォルトは `groupId`"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:56
-#, fuzzy
 msgid "`appName` - Use the default value.  This is the application name in Azure.  It must be a unique subdomain name under `*.azurewebsites.net`. Otherwise deploying to Azure will fail."
 msgstr "`appName` - 既定値を使用します。これは、Azure でのアプリケーション名です。 `*.azurewebsites.net` 以下の一意のサブドメイン名である必要があります。そうしないと、Azure へのデプロイに失敗します。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:57
-#, fuzzy
 msgid "`appRegion` - Defaults to `westus`.  Dependent on your azure region."
 msgstr "`appRegion` - デフォルトは `westus` です。お使いの azure リージョンに依存します。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:58
-#, fuzzy
 msgid "`function` - Use the default which is `quarkus`.  Name of your azure function. Can be anything you want."
 msgstr "`function` - デフォルトの `quarkus` を使用してください。あなたの azure 関数の名前。何でも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:59
-#, fuzzy
 msgid "`resourceGroup` - Use the default value.  Any value is fine though."
 msgstr "`resourceGroup` - デフォルト値を使用してください。どんな値でも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:61
-#, fuzzy
 msgid "The values above are defined as properties in the generated `pom.xml` file."
 msgstr "上記の値は、生成された `pom.xml` ファイルのプロパティーとして定義されています。"
 
 #. type: Title ==
 #: upstream/_guides/azure-functions-http.adoc:62
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Login to Azure"
 msgstr "Azureへのログイン"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:65
-#, fuzzy
 msgid "If you don't login to Azure you won't be able to deploy."
 msgstr "Azureにログインしないとデプロイできません。"
 
@@ -197,13 +177,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/azure-functions-http.adoc:71
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Build and Deploy to Azure"
-msgstr "Azureへのビルドとデプロイ"
+msgstr "ビルドと Azure へのデプロイ"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:76
-#, fuzzy
 msgid "The `pom.xml` you generated in the previous step pulls in the `azure-functions-maven-plugin`.  Running maven install generates config files and a staging directory required by the `azure-functions-maven-plugin`.  Here's how to execute it."
 msgstr "前のステップで生成した `pom.xml` は、 `azure-functions-maven-plugin` .maven install を実行すると、設定ファイルと `azure-functions-maven-plugin` によって必要とされるステージングディレクトリーが生成されます。実行方法は以下の通りです。"
 
@@ -215,21 +194,18 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:84
-#, fuzzy
 msgid "If you haven't already created your function up at azure, the will build an uber-jar, package it, create the function at Azure, and deploy it."
-msgstr "あなたがまだ Azure で機能を作成していない場合は、uber-jar をビルドしてパッケージ化し、Azure で機能を作成してデプロイします。"
+msgstr "あなたがまだ Azure で Function を作成していない場合は、uber-jar をビルドしてパッケージ化し、Azure で Function を作成してデプロイします。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:86
-#, fuzzy
 msgid "If deployment is a success, the azure plugin will tell you the base URL to access your function."
-msgstr "デプロイが成功した場合、azure プラグインは機能にアクセスするためのベース URL を教えてくれます。"
+msgstr "デプロイが成功した場合、azure プラグインは Function にアクセスするためのベース URL を教えてくれます。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:88
-#, fuzzy
 msgid "i.e."
-msgstr "輒"
+msgstr "例えば"
 
 #. type: delimited block -
 #: upstream/_guides/azure-functions-http.adoc:91
@@ -239,68 +215,61 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:94
-#, fuzzy
 msgid "The URL to access the service would be"
-msgstr "サービスにアクセスするためのURLは"
+msgstr "サービスにアクセスするためのURLは次のようになります。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:99
-#, fuzzy
 msgid "https://{appName}.azurewebsites.net/api/hello https://{appName}.azurewebsites.net/api/servlet/hello https://{appName}.azurewebsites.net/api/vertx/hello https://{appName}.azurewebsites.net/api/funqyHello"
 msgstr "https://{appName}.azurewebsites.net/api/ https://{appName}.azurewebsites.net/api/hello https://{appName}.azurewebsites.net/api/servlet/hello hello https://{appName}.azurewebsites.net/api/ https://{appName}.azurewebsites.net/api/vertx/hello https://{appName}.azurewebsites.net/api/funqyHello"
 
 #. type: Title ==
 #: upstream/_guides/azure-functions-http.adoc:100
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Extension maven dependencies"
-msgstr "拡張mavenの依存関係"
+msgstr "エクステンションのmaven依存関係"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:105
-#, fuzzy
 msgid "The sample project includes the RESTEasy, Undertow, Vert.x Web, link:funqy-http[Funqy HTTP] extensions.  If you are only using one of those APIs (i.e. jax-rs only), respectively remove the maven dependency `quarkus-resteasy`, `quarkus-undertow`, `quarkus-funqy-http`, and/or `quarkus-vertx-web`."
-msgstr "サンプルプロジェクトには、RESTEasy、Undertow、Vert.x Web、 link:funqy-http[Funqy HTTP] エクステンションが含まれています。これらのAPIの1つだけを使用している場合(つまりjax-rsのみ)は、それぞれmavenの依存関係を削除してください `quarkus-resteasy` , `quarkus-undertow` , `quarkus-funqy-http` , , および/または `quarkus-vertx-web` ."
+msgstr "サンプルプロジェクトには、RESTEasy、Undertow、Vert.x Web、 link:funqy-http[Funqy HTTP] エクステンションが含まれています。これらのAPIの1つだけを使用している場合(つまりjax-rsのみ)は、`quarkus-resteasy` , `quarkus-undertow` , `quarkus-funqy-http` , , および/または `quarkus-vertx-web` などのそれぞれmavenの依存関係を削除してください "
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:108
-#, fuzzy
 msgid "You must include the `quarkus-azure-functions-http` extension as this is a generic bridge between the Azure Functions runtime and the HTTP framework you are writing your microservices in."
-msgstr "これは、Azure Functions ランタイムとマイクロサービスを書いている HTTP フレームワークの間の一般的なブリッジなので、 `quarkus-azure-functions-http` エクステンションを含める必要があります。"
+msgstr "`quarkus-azure-functions-http` エクステンションを含める必要があります。これは、Azure Functions ランタイムとマイクロサービスを書いている HTTP フレームワークの間の一般的なブリッジです。"
 
 #. type: Title ==
 #: upstream/_guides/azure-functions-http.adoc:109
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Azure Deployment Descriptors"
-msgstr "Azureデプロイメント記述子"
+msgstr "Azureデプロイメントディスクリプタ"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:113
-#, fuzzy
 msgid "Templates for Azure Functions deployment descriptors (`host.json`, `function.json`) are within the `azure-config` directory.  Edit them as you need to.  Rerun the build when you are ready."
-msgstr "Azure Functions 配置記述子のテンプレート ( `host.json` , `function.json` ) は、 `azure-config` ディレクトリー内にあります。必要に応じて編集してください。準備ができたらビルドを再実行します。"
+msgstr "Azure Functions デプロイメントディスクリプタのテンプレート ( `host.json` , `function.json` ) は、 `azure-config` ディレクトリー内にあります。必要に応じて編集してください。準備ができたらビルドを再実行します。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:116
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "*NOTE*: If you change the `function.json` `path` attribute or if you add a `routePrefix`,\n"
 "your jax-rs endpoints won't route correctly.  See <<config-azure-paths>> for more information.\n"
-msgstr "*注* : `function.json` `path` 属性を変更したり、 `routePrefix` を追加したりすると、jax-rs エンドポイントは正しくルーティングされません。詳細は link:#config-azure-paths[[config-azure-paths] を] 参照してください。"
+msgstr "*注* : `function.json` `path` 属性を変更したり、 `routePrefix` を追加したりすると、jax-rs エンドポイントは正しくルーティングされません。詳細は link:#config-azure-paths[[config-azure-paths] ] を参照してください。\n"
 
 #. type: Title ==
 #: upstream/_guides/azure-functions-http.adoc:119
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configuring Root Paths"
 msgstr "ルートパスの設定"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:124
-#, fuzzy
 msgid "The default route prefix for an Azure Function is `/api`.  All of your JAX-RS, Servlet, Vert.x Web, and link:funqy-http[Funqy HTTP] endpoints must explicitly take this into account.  In the generated project this is handled by the `quarkus.http.root-path` switch in `application.properties`"
-msgstr "Azure Function のデフォルトのルートプレフィックスは `/api` です。すべてのJAX-RS、サーブレット、Vert.x Web、および link:funqy-http[Funqy HTTP] エンドポイントは、これを明示的に考慮しなければなりません。 `quarkus.http.root-path` 生成されたプロジェクトでは、これは `application.properties`"
+msgstr "Azure Function のデフォルトのルートプレフィックスは `/api` です。すべてのJAX-RS、サーブレット、Vert.x Web、および link:funqy-http[Funqy HTTP] エンドポイントは、これを明示的に考慮しなければなりません。生成されたプロジェクトでは、これは `application.properties` の `quarkus.http.root-path` スイッチで制御できます。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:127
-#, fuzzy
 msgid "If you modify the `path` or add a `routePrefix` within the `azure-config/function.json` deployment descriptor, your code or configuration must also reflect any prefixes you specify for your path."
-msgstr "`path` を変更したり、 `azure-config/function.json` 配置記述子内に `routePrefix` を追加したりする場合、コードや設定にはパスに指定した接頭辞も反映させる必要があります。"
+msgstr "`path` を変更したり、 `azure-config/function.json` デプロイメントディスクリプタ内に `routePrefix` を追加したりする場合、コードや設定にはパスに指定した接頭辞も反映させる必要があります。"
