--- a/l10n/po/ja_JP/_versions/1.7/guides/microprofile-health.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/microprofile-health.adoc.po
@@ -128,7 +128,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:62
 msgid "If you already have your Quarkus project configured, you can add the `smallrye-health` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、 `smallrye-health` エクステンションをプロジェクトに追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:66
@@ -160,12 +160,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:78
 #, no-wrap
 msgid "Running the health check"
-msgstr ""
+msgstr "ヘルスチェックの実行"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:81
 msgid "Importing the `smallrye-health` extension directly exposes three REST endpoints:"
-msgstr ""
+msgstr "`smallrye-health` エクステンションを直接インポートすると、3つのRESTエンドポイントが公開されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:83
@@ -185,12 +185,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:87
 msgid "To check that the `smallrye-health` extension is working as expected:"
-msgstr ""
+msgstr "`smallrye-health` エクステンションが期待通りに動作しているかのチェック"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:89
 msgid "start your Quarkus application with `./mvnw compile quarkus:dev`"
-msgstr ""
+msgstr " `./mvnw compile quarkus:dev` でQuarkusアプリケーションを起動します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:91
@@ -200,7 +200,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:93
 msgid "All of the health REST endpoints return a simple JSON object with two fields:"
-msgstr ""
+msgstr "すべてのヘルスRESTエンドポイントは、2つのフィールドを持つシンプルなJSONオブジェクトを返します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:95
@@ -215,23 +215,23 @@ msgstr "`checks` -- an array of individual checks"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:100
 msgid "The general `status` of the health check is computed as a logical AND of all the declared health check procedures. The `checks` array is empty as we have not specified any health check procedure yet so let's define some."
-msgstr ""
+msgstr "ヘルスチェックの一般的な `status` は、宣言されたすべてのヘルスチェックの論理的な AND として計算されます。 `checks` 配列は、まだヘルスチェックの手順を指定していないので空ですが、いくつか定義してみましょう。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:101
 #, no-wrap
 msgid "Creating your first health check"
-msgstr ""
+msgstr "初めてのヘルスチェックの作成"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:104
 msgid "In this section, we create our first simple health check procedure."
-msgstr ""
+msgstr "このセクションでは、最初の簡単なヘルスチェック手順を作成します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:106
 msgid "Create the `org.acme.microprofile.health.SimpleHealthCheck` class:"
-msgstr ""
+msgstr "`org.acme.microprofile.health.SimpleHealthCheck` クラスを作成"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:110
@@ -283,17 +283,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:128
 msgid "It's recommended to annotate the health check class with `@ApplicationScoped` or the `@Singleton` scope so that a single bean instance is used for all health check requests."
-msgstr ""
+msgstr "すべてのヘルスチェック要求に単一のBeanインスタンスが使用されるように、ヘルスチェッククラスに `@ApplicationScoped` または `@Singleton` のスコープでアノテーションを付けることをお勧めします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:129
 msgid "If a bean class annotated with one of the health check annotations declares no scope then the `@Singleton` scope is used automatically."
-msgstr ""
+msgstr "ヘルスチェックアノテーションの1つでアノテーションされたBeanクラスがスコープを宣言していない場合、 `@Singleton` のスコープが自動的に使用されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:131
 msgid "As you can see, the health check procedures are defined as CDI beans that implement the `HealthCheck` interface and are annotated with one of the health check qualifiers, such as:"
-msgstr ""
+msgstr "ご覧のように、ヘルスチェック・プロシージャは、 `HealthCheck` インターフェースを実装するCDI Beanとして定義され、次のようなヘルスチェック修飾子の1つでアノテーションされています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:133
@@ -308,7 +308,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:138
 msgid "`HealthCheck` is a functional interface whose single method `call` returns a `HealthCheckResponse` object which can be easily constructed by the fluent builder API shown in the example."
-msgstr ""
+msgstr "`HealthCheck` は関数インターフェースで、その単一のメソッド `call` は `HealthCheckResponse` オブジェクトを返します。このオブジェクトは、例で示した fluent builder API で簡単に構築することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:144
@@ -324,7 +324,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:148
 #, no-wrap
 msgid "Adding a readiness health check procedure"
-msgstr ""
+msgstr "レディネス・ヘルスチェック手順の追加"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:154
@@ -339,7 +339,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:160
 msgid "Create `org.acme.microprofile.health.DatabaseConnectionHealthCheck` class:"
-msgstr ""
+msgstr "`org.acme.microprofile.health.DatabaseConnectionHealthCheck` クラスを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:168
@@ -384,23 +384,23 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:197
 msgid "More information about which health check procedures should be used in which situation is detailed in the MicroProfile Health specification. Generally, the liveness procedures determine whether the application should be restarted while readiness procedures determine whether it makes sense to contact the application with requests."
-msgstr ""
+msgstr "どのような状況でどのヘルスチェック手順を使用すべきかについての詳細は、MicroProfile Health 仕様に記載されています。一般的には、liveness手続きはアプリケーションを再起動すべきかどうかを判断し、readiness手続きはアプリケーションにリクエストを出すことが意味のあることかどうかを判断します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:198
 #, no-wrap
 msgid "Negative health check procedures"
-msgstr ""
+msgstr "ネガティブヘルスチェックの手順"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:204
 msgid "In this section, we extend our `Database connection health check` with the option of stating that our application is not ready to process requests as the underlying database connection cannot be established. For simplicity reasons, we only determine whether the database is accessible or not by a configuration property."
-msgstr ""
+msgstr "このセクションでは、 `Database connection health check` を拡張して、基礎となるデータベース接続が確立できないために、アプリケーションがリクエストを処理する準備ができていないことを示すオプションを追加します。簡略化のため、データベースにアクセスできるかどうかの判断は、設定プロパティでのみ行います。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:206
 msgid "Update the `org.acme.microprofile.health.DatabaseConnectionHealthCheck` class:"
-msgstr ""
+msgstr "`org.acme.microprofile.health.DatabaseConnectionHealthCheck` クラスを以下のように更新します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:216
@@ -471,7 +471,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:255
 msgid "Until now we used a simplified method of building a `HealthCheckResponse` through the `HealthCheckResponse#up(String)` (there is also `HealthCheckResponse#down(String)`) which will directly build the response object.  From now on, we utilize the full builder capabilities provided by the `HealthCheckResponseBuilder` class."
-msgstr ""
+msgstr "これまでは、レスポンスオブジェクトを直接構築する `HealthCheckResponse#up(String)` （ `HealthCheckResponse#down(String)` もあります）を通して `HealthCheckResponse` を構築するという単純な方法を使っていました。今後は、 `HealthCheckResponseBuilder` クラスが提供する完全なビルダー機能を利用します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:260
@@ -492,7 +492,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:267
 #, no-wrap
 msgid "Adding user-specific data to the health check response"
-msgstr ""
+msgstr "ヘルスチェックのレスポンスにユーザー固有のデータを追加"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:275
@@ -565,28 +565,28 @@ msgstr ""
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:324
 #, no-wrap
 msgid "Extension health checks"
-msgstr ""
+msgstr "エクステンションのヘルスチェック"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:327
 msgid "Some extension may provide default health checks, including the extension will automatically register its health checks."
-msgstr ""
+msgstr "一部のエクステンションでは、デフォルトのヘルスチェックを提供している場合があり、その場合、エクステンションは自動的にヘルスチェックを登録します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:330
 msgid "For example, `quarkus-agroal` that is used to manage Quarkus datasource(s) automatically register a readiness health check that will validate each datasources: link:datasource#datasource-health-check[Datasource Health Check]."
-msgstr ""
+msgstr "例えば、Quarkusのデータソースを管理するために使用される `quarkus-agroal` は、各データソースを検証するReadinessヘルスチェックを自動的に登録します: link:datasource#datasource-health-check[データソースのヘルスチェック]。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:332
 msgid "You can disable extension health check via the property `quarkus.health.extensions.enabled` so none will be automatically registered."
-msgstr ""
+msgstr "エクステンションのヘルスチェックは、プロパティ（ `quarkus.health.extensions.enabled` ）で無効にすることができ、自動的に登録されることはありません。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:333
 #, no-wrap
 msgid "Health UI "
-msgstr ""
+msgstr "Health UI "
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:336
@@ -596,12 +596,12 @@ msgstr "実験的 - MicroProfileの仕様に含まれません"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:338
 msgid "`health-ui` allows you to see your Health Checks in a Web GUI."
-msgstr ""
+msgstr "`health-ui` はヘルスチェックの内容をWeb GUIで確認することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:340
 msgid "The Quarkus `smallrye-health` extension ships with `health-ui` and enables it by default in dev and test modes, but it can also be explicitly configured for production mode as well."
-msgstr ""
+msgstr "Quarkusの `smallrye-health` エクステンションは、 `health-ui` を同梱しており、devおよびtestモードでデフォルトで有効になりますが、productionモードでも同様に明示的に設定することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:342
@@ -611,7 +611,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:344
 msgid "image:health-ui-screenshot01.png[alt=Health UI]"
-msgstr ""
+msgstr "image:health-ui-screenshot01.png[alt=Health UI]"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/microprofile-health.adoc:345
