--- a/l10n/po/ja_JP/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-29 11:07+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-29 22:21+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.13.3.Final released - Maintenance release'\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 1.13.3.Final released - Maintenance release'\n"
+"title: 'Quarkus 1.13.3.Final リリース - メンテナンスリリース'\n"
 "date: 2021-04-14\n"
 "tags: release\n"
 "synopsis: 1.13.3.Finalは、1.13リリーストレインのメンテナンスリリースです。\n"
@@ -44,13 +44,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc:11
-#, fuzzy
 msgid "We just released 1.13.3.Final, a new maintenance release for the 1.13 release train."
 msgstr "1.13リリーストレインの新しいメンテナンスリリースである1.13.3.Finalをリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc:13
-#, fuzzy
 msgid "1.13.3.Final is a safe upgrade for everyone using Quarkus 1.13."
 msgstr "1.13.3.Finalは、Quarkus 1.13を使用しているすべての人にとって安全なアップグレードです。"
 
@@ -73,9 +71,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc:21
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.13.3.Final[the full changelog of 1.13.3.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.3.Final[1.13.3.Finalの完全な変更履歴は、GitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.3.Final[1.13.3.Finalの完全な変更履歴は、GitHub] に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-28-quarkus-1-13-3-final-released.adoc:22
