--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-27 02:52+0000\n"
+"POT-Creation-Date: 2021-06-02 03:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,14 +29,14 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:9
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:86
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:122
 #, no-wrap
 msgid "Type"
 msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:11
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:88
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:124
 #, no-wrap
 msgid "Default"
 msgstr "デフォルト"
@@ -55,7 +55,8 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:17
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:94
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:116
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:130
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -85,7 +86,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:53
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:62
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:71
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:103
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:139
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -128,7 +129,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:56
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:105
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:141
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -182,13 +183,70 @@ msgid "`default`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:85
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:88
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.error-extension-fields]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.error-extension-fields[quarkus.smallrye-graphql.error-extension-fields]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"List of extension fields that should be included in the error response. By default none will be included. Examples of valid values include ++[++exception,classification,code,description,validationErrorType,queryPath++]++\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:89
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:98
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:107
+#, fuzzy, no-wrap
+#| msgid "string"
+msgid "list of string"
+msgstr "string"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:97
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.show-runtime-exception-message]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.show-runtime-exception-message[quarkus.smallrye-graphql.show-runtime-exception-message]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"List of Runtime Exceptions class names that should show the error message. By default Runtime Exception messages will be hidden and a generic `Server Error` message will be returned.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:106
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.hide-checked-exception-message]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.hide-checked-exception-message[quarkus.smallrye-graphql.hide-checked-exception-message]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"List of Checked Exceptions class names that should hide the error message. By default Checked Exception messages will show the exception message.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:115
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.default-error-message]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.default-error-message[quarkus.smallrye-graphql.default-error-message]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The default error message that will be used for hidden exception messages. Defaults to \"Server Error\"\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:121
 #, no-wrap
 msgid "[[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.ui-smallrye-graphql-ui-configuration]]link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.ui-smallrye-graphql-ui-configuration[SmallRye GraphQL UI configuration]"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:93
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:129
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.ui.root-path]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.ui.root-path[quarkus.smallrye-graphql.ui.root-path]`\n"
@@ -200,13 +258,13 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:97
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:133
 #, no-wrap
 msgid "`graphql-ui`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:102
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql-small-rye-graph-ql-config.adoc:138
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.ui.always-include]]`link:#quarkus-smallrye-graphql-small-rye-graph-ql-config_quarkus.smallrye-graphql.ui.always-include[quarkus.smallrye-graphql.ui.always-include]`\n"
