--- a/l10n/po/ja_JP/_versions/main/guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/cdi-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-06-02 03:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -149,10 +149,14 @@ msgstr "gradle を使っている場合は、以下のプラグインを `build.
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/cdi-reference.adoc:77
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "plugins {\n"
+#| "    id 'org.kordamp.gradle.jandex' version '0.6.0'\n"
+#| "}\n"
 msgid ""
 "plugins {\n"
-"    id 'org.kordamp.gradle.jandex' version '0.6.0'\n"
+"    id 'org.kordamp.gradle.jandex' version '0.10.0'\n"
 "}\n"
 msgstr ""
 "plugins {\n"
