--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-micrometer-config-group-config-prometheus-config-group.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-micrometer-config-group-config-prometheus-config-group.adoc.po
@@ -100,4 +100,4 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-micrometer-config-group-config-prometheus-config-group.adoc:39
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
