--- a/l10n/stats/override.csv
+++ b/l10n/stats/override.csv
@@ -3,7 +3,7 @@ l10n/override/ja_JP/_layouts/extensions.html, 2021-02-06 14:23:31 +0000, 2019-08
 l10n/override/ja_JP/_layouts/awards.html, 2021-02-06 14:23:31 +0000, 2020-07-01 09:27:19 +0000, OK
 l10n/override/ja_JP/_layouts/guides-index.html, 2021-05-21 13:26:13 +0000, 2021-05-20 08:48:45 +0000, OK
 l10n/override/ja_JP/_includes/header-navigation.html, 2021-02-06 14:23:31 +0000, 2020-07-01 09:32:46 +0000, OK
-l10n/override/ja_JP/_includes/homepage-imperative_and_reactive-band.html, 2021-02-06 14:23:31 +0000, 2019-11-05 22:20:38 +0000, OK
+l10n/override/ja_JP/_includes/homepage-imperative_and_reactive-band.html, 2021-02-06 14:23:31 +0000, 2021-06-04 09:19:39 +0000, NG
 l10n/override/ja_JP/_includes/homepage-video-band.html, 2021-02-06 14:23:31 +0000, 2019-11-04 22:19:28 +0000, OK
 l10n/override/ja_JP/_guides/guides.md, 2021-05-21 13:26:13 +0000, 2021-05-20 08:48:44 +0000, OK
 l10n/override/ja_JP/blog.md, 2021-05-21 13:26:13 +0000, 2021-05-20 08:48:44 +0000, OK
