--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-06-04-quarkus-2-0-0-cr3-released.adoc.po, 0, 21, 0, 215 ,100%
 l10n/po/ja_JP/_posts/2021-05-27-quarkus-insights-qanda2.adoc.po, 0, 5, 0, 117 ,100%
 l10n/po/ja_JP/_posts/2021-05-27-quarkus-2-0-0-cr2-released.adoc.po, 0, 24, 0, 275 ,100%
 l10n/po/ja_JP/_posts/2021-05-27-quarkus-1-13-6-final-released.adoc.po, 0, 16, 0, 176 ,100%
